--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -21,6 +21,7 @@
       <tr> <td>14:30</td>  <td>Morning break</td> </tr>
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>14:30</td>  <td>END</td> </tr>
+      <tr> <td>&nbsp;</td>  <td>&nbsp;</td> </tr>
       <tr> <td> <h3>Day 4</H3> </td> </tr>
       <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-open-refine/">OpenRefine</a></td> </tr>
       <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
