--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -6,31 +6,32 @@
       <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-overview/">Jargon Busting, A Computational Approach, Introduction to Working with Data (Regular Expressions)</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
       <tr> <td>14:45</td>  <td><a href="https://librarycarpentry.org/lc-overview/">Introduction to Working with Data (Regular Expressions)</a> (continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:00</td>  <td>END</td> </tr>
       <tr> <td> <h3>Day 2</H3> </td> </tr>
       <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-shell/">The Unix Shell</a></td> </tr>  
       <tr> <td>14:30</td>  <td>Break</td> </tr>
       <tr> <td>14:45</td>  <td><a href="https://librarycarpentry.org/lc-shell/">The Unix Shell</a> (continued) </td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
     <h3>Day 3</h3>
     <table class="table table-striped">
+      <tr> <td>&nbsp;</td>  <td>&nbsp;</td> </tr>
       <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-git/">Introduction to Git</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
       <tr> <td>14:45</td>  <td><a href="https://librarycarpentry.org/lc-git/">Introduction to Git</a> (continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:00</td>  <td>END</td> </tr>
       <tr> <td>&nbsp;</td>  <td>&nbsp;</td> </tr>
       <tr> <td> <h3>Day 4</H3> </td> </tr>
       <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-open-refine/">OpenRefine</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
       <tr> <td>14:45</td>  <td><a href="https://librarycarpentry.org/lc-open-refine/">OpenRefine</a> (continued)</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}">Post-workshop survey</a></td> </tr>
+      <tr> <td>16:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>17:00</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}">Post-workshop survey</a></td> </tr>
     </table>
   </div>
 </div>
