--- a/_includes/lc/schedule.html
+++ b/_includes/lc/schedule.html
@@ -2,7 +2,7 @@
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
-      <tr> <td>Before Starting</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a></td> </tr>
+      <tr> <td>Beforehand</td>  <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a></td> </tr>
       <tr> <td>13:00</td>  <td><a href="https://librarycarpentry.org/lc-overview/">Jargon Busting, A Computational Approach, Introduction to Working with Data (Regular Expressions)</a></td> </tr>
       <tr> <td>14:30</td>  <td>Break</td> </tr>
       <tr> <td>14:45</td>  <td><a href="https://librarycarpentry.org/lc-overview/">Introduction to Working with Data (Regular Expressions)</a> (continued)</td> </tr>
